# narratrace

./: .gitignore  AGENTS.md  AGENT_STANDARDS.md  AMENDMENTS.jsonl  ARCHITECTURE.md  COMPLETION_MANIFEST.json  COVERAGE_RECEIPT.json  Cargo.toml  DESIGN.md  EXECPLAN.md  FRONTEND.md  GOAL_CONTRACT.md  LANE_REGISTRY.json  PLANS.md  PRODUCT_FITNESS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RED_FIXTURES.json  REFERENCES.md  RELIABILITY.md  SECURITY.md  SKILL.md  VALIDATION.md  VERIFICATION_BACKLOG.json
.codex/: setup-worktree-env.sh
.harness/: coverage-command  coverage-manifest.json
agent-standards/: 01-namespace-and-progressive-disclosure.md  02-boundaries-validation-and-enforcement.md  03-execplans-worktrees-and-orchestration.md  04-security-reliability-and-product-cohesion.md  05-review-and-completion.md  06-standards-gardening.md  README.md  enforcement-audit.tsv  enforcement.json  enforcement.tsv
docs/: product-cohesion.md  runtime.md
references/: helper-commands.md  microphone-input-policy.md  transcript-video-alignment.md
scripts/: audit-private-run-permissions  check  check-agent-standards  check-agent-standards-rowset  check-coverage  check-coverage-fast  check-coverage-full  check-coverage-policy  check-line-cap  check-package-hygiene  check-package-sync  check-product-fitness  check-skill-contracts  test-package-sync
src/: audio_input.rs  audio_retention.rs  audio_retention_tests.rs  batch_transcribe.rs  bundle.rs  config.rs  delay_eval.rs  inspect.rs  main.rs  main_extra_tests.rs  packet.rs  parent_operation.rs  private_fs.rs  realtime.rs  (+13 more)
(+290 files in other folders)
