[package]
name = "narrated-record-replay"
version = "0.1.18"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "native-tls"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
